<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.gallery.GalleryFragment">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/serviciosdatos"
        android:textSize="18sp"
        android:textColor="@color/white"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:contentDescription="@string/about"
            android:src="@drawable/reparacionadornos" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/servicios1" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:text="@string/descrips1" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:text="@string/servcel"/>
        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:contentDescription="@string/about"
            android:src="@drawable/disenpersona2" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:textAlignment="center">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/servicios2"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descrips2"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/servcel"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>